<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_tasks"
    android:layout_width="match_parent"
    android:visibility="visible"
    android:layout_height="match_parent"
    android:background="@color/edit_back"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/edit_body"
        android:visibility="visible"
        android:layout_height="match_parent">
        <TextView
            android:background="@color/edit_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText"
            android:text="@string/Edit_welcome"
            android:textAlignment="center"
            android:textSize="25sp"
            android:paddingBottom="25dp"
            />
        <NumberPicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Priority"
            app:layout_constraintTop_toBottomOf="@id/EditText"
            />

        <EditText
            android:id="@+id/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/Priority" />
        <Button
            android:id="@+id/pick_date"
            android:text="@string/Pick_date"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/input_text"
            />
        <Button
            android:id="@+id/submit_button"
            android:text="@string/Submit_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            app:layout_constraintTop_toBottomOf="@id/pick_date"
            />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:id="@+id/date"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <include layout="@layout/activity_date"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>